--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
     <h2>Hey my name is Syed Arshiyan Rashid</h2>
       <p> I live in Chicago and I am an aspiring Software Developer</p>
       <p>I have a few hobbies other than being a nerd such as</p>
-      <ul>
+      <div class="center">
+      <ul class="align">
         <li>Working on my cars</li>
         <li>Photography</li>
         <li>Gaming</li>
       </ul>
+      </div>
       <hr>
     </section>
   <!-- about me -->
@@ -38,7 +40,8 @@
     <p>I am still on college with my major being in computer science. I was working at Microsoft before joining Thinkful. I have always heard about my friends talking about coding and i wanted to join a bootcamp that was worth it. </p>
       <p> After joining thinkful I started coding within a week and i really enjoy it.</p>
       <P> Pretty soon I will be working on</p> 
-      <ol>
+      <div class="center"> 
+      <ol class="align">
       <li>projects</li> 
       <li>certifications</li>
       <li>Github</li>
