--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <li>certifications</li>
       <li>Github</li>
       </ol>
+      </div>
         <p> I will update this website and my github once I have projects, certificates,</P>
     </section>
     <!-- contact links -->
