--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <section>
       <h3>Contact me</h3>
   <div class="center">    
-  <ul>
+  <ul class="align">
         <li>
       <a href="http://www.linkedin.com/in/syed-arshiyan-rashid" target="_blank">Linkedin</a>
         </li>
