--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <h2>Hey my name is Syed Arshiyan Rashid</h2>
       <p> I live in Chicago and I am an aspiring Software Developer</p>
       <p>I have a few hobbies other than being a nerd such as</p>
-      <div class="center">
-      <ul class="align">
+      <div class="container">
+      <ul>
         <li>Working on my cars</li>
         <li>Photography</li>
         <li>Gaming</li>
@@ -40,7 +40,7 @@
     <p>I am still on college with my major being in computer science. I was working at Microsoft before joining Thinkful. I have always heard about my friends talking about coding and i wanted to join a bootcamp that was worth it. </p>
       <p> After joining thinkful I started coding within a week and i really enjoy it.</p>
       <P> Pretty soon I will be working on</p> 
-      <div class="center">
+      <div class="container">
       <ol>
       <li>projects</li> 
       <li>certifications</li>
@@ -53,8 +53,8 @@
     <hr>
 <section>
       <h3>Contact me</h3>
-  <div class="center">    
-  <ul class="align">
+  <div class="container">    
+  <ul>
         <li>
       <a href="http://www.linkedin.com/in/syed-arshiyan-rashid" target="_blank">Linkedin</a>
         </li>
